overflow issue
overflow-y: auto;
flex-direction: column;

--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,8 @@ body {
 @media (max-width: 640px) {
   .swiper-wrapper {
     display: flex;
-    
+    overflow-y: auto;
+    flex-direction: column;
   }
   .slider-buttons {
     display: none;
